k8s/ingress-health.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-health-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /health/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /health/flag
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
          - path: /health/targeting
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
          - path: /health/eval
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
